font family changed

--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
+    <!-- <link
         href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=DM+Sans:wght@300;400;500;600;700&display=swap"
+        rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
     <script>
         tailwind.config = {
@@ -50,8 +52,8 @@
                         }
                     },
                     fontFamily: {
-                        'display': ['Playfair Display', 'serif'],
-                        'body': ['DM Sans', 'sans-serif'],
+                        'display': ['Urbanist', 'sans-serif'],
+                        'body': ['Urbanist', 'sans-serif'],
                     }
                 }
             }
@@ -69,7 +71,7 @@
         }
 
         body {
-            font-family: 'DM Sans', sans-serif;
+            font-family: 'Urbanist', sans-serif;
             background: #fdfaf7;
             overflow-x: hidden;
         }
