--- a/index.html
+++ b/index.html
@@ -584,18 +584,18 @@
 
                     <div class="flex items-center gap-5 sm:gap-8">
                         <div class="stat-item">
-                            <span class="block text-3xl lg:text-4xl font-display font-bold text-[#2d64c8]">15+</span>
+                            <span class="block text-3xl lg:text-4xl font-display font-bold text-[#2d64c8]">55+</span>
                             <span class="text-sm text-black">Years Experience</span>
                         </div>
                         <div class="w-px h-12 bg-[#2d64c8]"></div>
                         <div class="stat-item">
-                            <span class="block text-3xl lg:text-4xl font-display font-bold text-[#2d64c8]">5000+</span>
-                            <span class="text-sm text-black">Successful Surgeries</span>
+                            <span class="block text-3xl lg:text-4xl font-display font-bold text-[#2d64c8]">100+</span>
+                            <span class="text-sm text-black">Doctors</span>
                         </div>
                         <div class="w-px h-12 bg-[#2d64c8]"></div>
                         <div class="stat-item">
-                            <span class="block text-3xl lg:text-4xl font-display font-bold text-[#2d64c8]">98%</span>
-                            <span class="text-sm text-black">Success Rate</span>
+                            <span class="block text-3xl lg:text-4xl font-display font-bold text-[#2d64c8]">5L+</span>
+                            <span class="text-sm text-black">Patients Helped</span>
                         </div>
                     </div>
                 </div>
