button color changed

--- a/index.html
+++ b/index.html
@@ -1321,9 +1321,9 @@
                         </ul>
 
                         <a href="#contact" class="inline-flex items-center gap-2 px-4 py-2.5 text-sm
-                   sm:gap-3 sm:px-6 sm:py-3 sm:text-base
-                   lg:px-8 lg:py-4 lg:text-lg
-                   rounded-full text-white font-semibold shadow-lg transition" style="background-color:#2d64c8;">
+                            sm:gap-3 sm:px-6 sm:py-3 sm:text-base
+                            lg:px-8 lg:py-4 lg:text-lg
+                            rounded-full text-white font-semibold shadow-lg transition btn-primary" style="background-color:#2d64c8;">
                             Book Your Private Consultation
                             <span class="text-xl">→</span>
                         </a>
@@ -1543,10 +1543,10 @@
                                     placeholder="Describe your condition"></textarea>
                             </div>
                             <button type="submit" name="submit" class="btn-primary w-full 
-         px-5 py-3 text-sm 
-         sm:px-6 sm:py-3 sm:text-base
-         lg:px-8 lg:py-4 lg:text-lg
-         rounded-full text-white font-semibold shadow-xl">Book
+                               px-5 py-3 text-sm 
+                               sm:px-6 sm:py-3 sm:text-base
+                               lg:px-8 lg:py-4 lg:text-lg
+                               rounded-full text-white font-semibold shadow-xl">Book
                                 Your Consultation Now</button>
                         </form>
                         <p class="text-sm text-black mt-4 text-center">We'll get back to you within 24 hours</p>
