add hover for button

--- a/index.html
+++ b/index.html
@@ -393,6 +393,8 @@
 
         .submit-btn:hover {
             cursor: pointer;
+            transform: translateY(-2px);
+            box-shadow: 0 15px 40px -10px rgba(13, 148, 136, 0.4);
         }
 
         .form-actions {
