--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
                     <a href="#why-us" class="text-black hover:text-black font-medium transition-colors">Why Choose
                         Us</a>
                     <a href="#faq" class="text-black hover:text-black font-medium transition-colors">FAQ</a>
-                    <a href="tel:+919876543210"
+                    <a href="tel:+91959 152 3162"
                         class="btn-primary px-6 py-3 rounded-full text-white font-semibold shadow-lg">Book
                         Consultation</a>
                 </div>
@@ -523,7 +523,7 @@
                 <a href="#doctors" class="text-xl text-black font-medium">Our Doctors</a>
                 <a href="#why-us" class="text-xl text-black font-medium">Why Choose Us</a>
                 <a href="#faq" class="text-xl text-black font-medium">FAQ</a>
-                <a href="tel:+919876543210"
+                <a href="tel:+91959 152 3162"
                     class="btn-primary px-6 py-4 rounded-full text-white font-semibold text-center mt-4">Book
                     Consultation</a>
             </div>
@@ -574,7 +574,7 @@
                                     d="M17 8l4 4m0 0l-4 4m4-4H3" />
                             </svg>
                         </a>
-                        <a href="tel:+919876543210"
+                        <a href="tel:+91959 152 3162"
                             class="px-7 py-4 rounded-full border-2 border-[#05316b] text-[#05316b] font-semibold text-lg hover:bg-teal-50 transition-colors inline-flex items-center justify-center gap-2">
                             <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -1485,7 +1485,7 @@
                         </div>
                     </div>
 
-                    <a href="tel:+919876543210" class="inline-flex items-center 
+                    <a href="tel:+91959 152 3162" class="inline-flex items-center 
        gap-2 px-4 py-2.5 text-sm
        sm:gap-3 sm:px-6 sm:py-3 sm:text-base
        lg:gap-3 lg:px-8 lg:py-4 lg:text-lg
@@ -1561,13 +1561,13 @@
     <!-- Footer -->
     <footer class="bg-[#05316b] text-white py-16">
         <div>
-            <a href="tel:+9198765 43210">
+            <a href="tel:+919591523162">
                 <button class="btn-floating phone">
                     <img src="assets/images/call-icon.png" width="30" height="30" alt="Phone" class="inline-block" />
                     <span>Call us</span>
                 </button>
             </a>
-            <a href="https://wa.me/9198765 43210" target="_blank">
+            <a href="https://wa.me/919591523162" target="_blank">
                 <button class="btn-floating whatsapp">
                     <img src="assets/images/whatsapp-icon.png" width="30" height="30" alt="WhatsApp"
                         class="inline-block" />
@@ -1633,8 +1633,8 @@
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                     d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z" />
                             </svg>
-                            <a href="tel:+919876543210">
-                                <span>+91 98765 43210</span>
+                            <a href="tel:+91959 152 3162">
+                                <span>+91 959 152 3162</span>
                             </a>
 
                         </li>
