--- a/index.html
+++ b/index.html
@@ -828,7 +828,7 @@
                     of combined experience and international training.</p>
             </div>
 
-            <div class="grid md:grid-cols-1 gap-8 lg:gap-12">
+            <div class="grid grid-cols-1 lg:grid-cols-2 gap-8 lg:gap-12">
                 <div class="doctor-card-item doctor-card rounded-3xl p-8 shadow-xl card-hover">
                     <div class="flex flex-col sm:flex-row gap-6">
                         <div
